# fraudwar-room

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pages.yml
backend/: pyproject.toml
backend/fraudwar/: __init__.py  cli.py  main.py
backend/fraudwar/adaptation/: engine.py
backend/fraudwar/arena/: environment.py
backend/fraudwar/defenses/: active_learning.py  adaptive_threshold.py  gnn.py  model.py  rules.py
backend/fraudwar/graph/: engine.py
backend/fraudwar/investigators/: queue.py
backend/fraudwar/metrics/: calculations.py
backend/fraudwar/reports/: after_action.py  investigator_summary.py
backend/fraudwar/schemas/: entities.py
backend/fraudwar/services/: persistence.py
backend/fraudwar/synthetic/: generator.py
backend/tests/: test_fraudwar.py
docs/architecture/: ARCHITECTURE.md
docs/benchmarks/: BENCHMARKING.md
docs/experiments/: EXPERIMENTS.md
docs/launch/: GITHUB_README_LAUNCH.md  LINKEDIN_POST_DRAFT.md
docs/metrics/: METRICS.md
docs/portfolio/: PORTFOLIO_WRITEUP.md
frontend/: next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
scripts/: benchmark_experiments.py  capture_dashboard_screenshots.mjs  check_optional_features.py  export_demo_reports.py  export_frontend_demo.py  generate_world.py  run_all_experiments.py  run_experiment.py  seed_demo_data.py
(+29 files in other folders)
